# cpp-raytracer

./: .clang-format  CMakeLists.txt  LICENSE
src/: boilerplate.cpp  boilerplate.h  main.cpp  ray.h  vec3.h
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
